--- a/index.html
+++ b/index.html
@@ -35,15 +35,16 @@
     </div>
 <div class="opcoes">
     <ul class="lista">
+ <li class="cardVazio"> <h2 class="titulo">titulo </h4></li>
+        <li class="cardVazio"></li>
 
         <li class="cardVazio"></li>
-        <li class="cardVazio"></li>
-        <li class="cardVazio"></li>
-        <li class="cardVazio"></li>
-        <li class="cardVazio"></li>
+       
     </ul>
 </div>
 
 </div> <!--fim container-->
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="js/renderizar.js"></script>
 </body>
 </html>
