imagem dentro do card

--- a/index.html
+++ b/index.html
@@ -44,7 +44,37 @@
 </div>
 
 </div> <!--fim container-->
+
+<div class="quizz-respostas  ">
+
+
+    <div class="topo">
+        <H1 class="tituloTopo">BuzzQuizz</H1>
+    </div>
+
+    <div class="imagem-fundo ">
+        <img src="" class="imagem-body" alt="">
+        <h2 class="titulodoquizz">tituloTopo</h2>
+    </div>
+  
+
+    <br>
+    <div class="caixa ">
+       
+<div class="caixadeUL ">
+    <ul class="lista-de-perguntas">
+        <div class="topo">dsa</div> 
+        <div class="pergunta">kjdsj</div><div class="pergunta">kjdsj</div><div class="pergunta">kjdsj</div><div class="pergunta">kjdsj</div>
+    </ul>
+    <br>
+    
+</div>
+   
+
+</div>
+
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="js/renderizar.js"></script>
+<script src="js/responder.js"></script>
 </body>
 </html>
