arrumando estilo do card principal

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
 <section class="container ">    <!--sem conteudo e meus quizes-->
     <div class="meusquizes">
-        <div class="cardVazio criarConteudo vazio ">
+        <div class=" criarConteudo vazio ">
             <h3 class="semConteudo">você não possui nenhum quizz </h3 >
                 <br>
-                <button class="criar">criar</button>
+                <a href="enviargame.html" class="criar">criar</a>
         </div> 
     </div>
 
