label para form

--- a/enviargame.html
+++ b/enviargame.html
@@ -30,12 +30,11 @@
     <div class="container escondido container1">
         <span class="titulo">   Crie suas perguntas</span>
 
-    <label for="" class="caixa caixaResponder">
+    <form  class="caixa caixaResponder">
 
       
-        <!-- <button id="butao" onclick="verificarTodosPreenchidos()">Prosseguir para criar</button> -->
-  
-    </label>
+      
+    </form>
 </div>
 </body>
 <script src="js/enviargame.js"></script>
