adicionando axios no codigo

--- a/enviargame.html
+++ b/enviargame.html
@@ -37,5 +37,8 @@
     </form>
 </div>
 </body>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
 <script src="js/enviargame.js"></script>
+
 </html>
