--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/resete.css" >
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responder.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>Quiz</title>
 </head>
 <body>
@@ -57,10 +59,10 @@
     <div class="caixa ">
         <div class="caixadeUL ">
             <ul class="lista-de-perguntas">
-                <div class="topo">dsa</div> 
+                <!-- <div class="topo"></div>  -->
                  </ul>
             <br>
-        </div>   
+        <!-- </div> -->
     </div>
 
 </section>
