--- a/enviargame.html
+++ b/enviargame.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/resete.css">
     <link rel="stylesheet" href="css/label.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>crie o seu </title>
 </head>
 <body>
