remove title no html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div class="imagem-fundo">
         <img src="" class="imagem-body" alt="">
-        <h2 class="titulodoquizz">tituloTopo</h2>
+        <h2 class="titulodoquizz"></h2>
     </div>
   
     <br>
