--- a/enviargame.html
+++ b/enviargame.html
@@ -13,7 +13,7 @@
 <body>
     <div class="topoFixo">BuzzQuiz</div>
     <div class="container">
-            <span class="titulo">   Comece pelo comeco</span>
+            <span class="titulo">   Comece pelo começo</span>
         <label for="" class="caixa">
             
             <input class="campoTexto"  id="titulo" minlength="20" maxlength="65" type="text" required placeholder="Título do seu quizz">
