--- a/enviargame.html
+++ b/enviargame.html
@@ -42,5 +42,6 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
 <script src="js/enviargame.js"></script>
+<script src="js/renderizar.js"></script>
 
 </html>
