--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="js/renderizar.js"></script>
 <script src="js/responder.js"></script>
-
+<!-- <script src="js/enviargame.js"></script> -->
 </body>
 </html>
